--- a/Hotel/View_layer/ViewProviders.xaml
+++ b/Hotel/View_layer/ViewProviders.xaml
@@ -6,7 +6,7 @@
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
              xmlns:local="clr-namespace:Hotel.View_layer"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
@@ -45,7 +45,137 @@
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
-            <Image Source="/View_layer/Images/MarcaDeAgua2.png"/>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="250"/>
+                <RowDefinition Height="150"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Margin="10 0 10 0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="{StaticResource tittleColor2}" Margin="5"/>
+                    <TextBox x:Name="txtBusqueda"
+                             FontSize="14"
+                             Height="24"
+                             Width="400"
+                             Background="Transparent"
+                             FontWeight="Medium"
+                             FontFamily="Alegreya"                             
+                             Foreground="{StaticResource tittleColor2}"
+                             CaretBrush="{StaticResource tittleColor1}"
+                             BorderBrush="{StaticResource tittleColor1}"
+                             BorderThickness="0,0,0,2"                             
+                             VerticalContentAlignment="Center"
+                             Margin="5"
+                             TextChanged="txtBusqueda_TextChanged"/>
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Row="1">
+                <DataGrid x:Name="listBoxProveedores" AutoGenerateColumns="False" Margin="10 0 10 10" 
+          Background="{StaticResource tittleColor5}" SelectionChanged="listBoxProveedores_SelectionChanged"
+          GridLinesVisibility="Vertical">
+                    <DataGrid.Resources>
+                        <Style TargetType="DataGridCell">
+                            <Setter Property="BorderThickness" Value="2"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource tittleColor1}"/>
+                        </Style>
+                    </DataGrid.Resources>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Provedor" Binding="{Binding NombreProv}" Width="100"/>
+                        <DataGridTextColumn Header="NIT" Binding="{Binding NIT}" Width="100"/>
+                        <DataGridTextColumn Header="Direccion" Binding="{Binding Direccion}" Width="150"/>
+                    </DataGrid.Columns>
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="SeparatorVisibility" Value="Visible"/>
+                            <Setter Property="Background" Value="{StaticResource tittleColor3}"/>
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
+                </DataGrid>
+
+            </Grid>
+            <Grid Grid.Row="2" Margin="20 20 10 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" Width="80">
+                    <Label Content="Nombre:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5"/>
+                    <Label Content="NIT:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5"/>
+                    <Label Content="Dirección:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5"/>
+                </StackPanel>
+                <StackPanel Grid.Column="1" HorizontalAlignment="Left">
+                    <TextBox x:Name="txtNombre" FontSize="14"
+                             Height="20"
+                             Width="400"
+                             Background="Transparent"
+                             FontWeight="Medium"
+                             FontFamily="Alegreya"                             
+                             Foreground="{StaticResource tittleColor2}"
+                             CaretBrush="{StaticResource tittleColor1}"
+                             BorderBrush="{StaticResource tittleColor1}"
+                             BorderThickness="0,0,0,2"                             
+                             VerticalContentAlignment="Center"
+                             Margin="5"/>
+                    <TextBox x:Name="txtNit" FontSize="14"
+                             Height="30"
+                             Width="400"
+                             Background="Transparent"
+                             FontWeight="Medium"
+                             FontFamily="Alegreya"                             
+                             Foreground="{StaticResource tittleColor2}"
+                             CaretBrush="{StaticResource tittleColor1}"
+                             BorderBrush="{StaticResource tittleColor1}"
+                             BorderThickness="0,0,0,2"                             
+                             VerticalContentAlignment="Center"
+                             Margin="5"/>
+                    <TextBox x:Name="txtDireccion" FontSize="14"
+                             Height="30"
+                             Width="400"
+                             Background="Transparent"
+                             FontWeight="Medium"
+                             FontFamily="Alegreya"                             
+                             Foreground="{StaticResource tittleColor2}"
+                             CaretBrush="{StaticResource tittleColor1}"
+                             BorderBrush="{StaticResource tittleColor1}"
+                             BorderThickness="0,0,0,2"                             
+                             VerticalContentAlignment="Center"
+                             Margin="5"/>
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Row="3" Margin="10 0 10 0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="center">
+                    <Button Content="Limpiar"
+                            Click="btnlimpiar_Click"
+                            Width="130"
+                            Height="40"
+                            Margin="10"
+                            Style="{StaticResource CustomButtonStyle}"/>
+                    <Button Content="Insertar"
+                            Click="btnAgregarProveedor_Click"
+                            Width="130"
+                            Height="40"
+                            Margin="10"
+                            Style="{StaticResource CustomButtonStyle}"/>
+                    <Button Content="Eliminar"
+                            Click="btnEliminar_Click"
+                            Width="130"
+                            Height="40"
+                            Margin="10"
+                            Style="{StaticResource CustomButtonStyle}"/>
+                    <Button Content="Modificar"
+                            Click="btnModificar_Click"
+                            Width="130"
+                            Height="40"
+                            Margin="10"
+                            Style="{StaticResource CustomButtonStyle}"/>
+                    
+                    
+                </StackPanel>
+            </Grid>
         </Grid>
+        
+
+
     </Grid>
 </UserControl>
