--- a/Hotel/View_layer/ViewProviders.xaml
+++ b/Hotel/View_layer/ViewProviders.xaml
@@ -48,7 +48,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="250"/>
-                <RowDefinition Height="150"/>
+                <RowDefinition Height="180"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0" Margin="10 0 10 0">
@@ -70,25 +70,44 @@
                              TextChanged="txtBusqueda_TextChanged"/>
                 </StackPanel>
             </Grid>
+
             <Grid Grid.Row="1">
                 <DataGrid x:Name="listBoxProveedores" AutoGenerateColumns="False" Margin="10 0 10 10" 
-          Background="{StaticResource tittleColor5}" SelectionChanged="listBoxProveedores_SelectionChanged"
-          GridLinesVisibility="Vertical">
+          Background="{StaticResource tittleColor5}" SelectionChanged="listBoxProveedores_SelectionChanged" 
+           IsReadOnly="True" VerticalGridLinesBrush="{StaticResource tittleColor1}" HorizontalGridLinesBrush="{StaticResource tittleColor1}" HeadersVisibility="Column">
+
                     <DataGrid.Resources>
+                        <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="{StaticResource BlankColor2 }" />
                         <Style TargetType="DataGridCell">
-                            <Setter Property="BorderThickness" Value="2"/>
-                            <Setter Property="BorderBrush" Value="{StaticResource tittleColor1}"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                        <Style TargetType="DataGridRow">
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
+                                </Trigger>
+                            </Style.Triggers>
                         </Style>
                     </DataGrid.Resources>
+
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Provedor" Binding="{Binding NombreProv}" Width="100"/>
-                        <DataGridTextColumn Header="NIT" Binding="{Binding NIT}" Width="100"/>
-                        <DataGridTextColumn Header="Direccion" Binding="{Binding Direccion}" Width="150"/>
+                        <DataGridTextColumn Header="Provedor" Binding="{Binding NombreProv}" Width="*"/>
+                        <DataGridTextColumn Header="NIT" Binding="{Binding NIT}" Width="*"/>
+                        <DataGridTextColumn Header="Direccion" Binding="{Binding Direccion}" Width="*"/>
+                        <DataGridTextColumn Header="Numero de Contacto" Binding="{Binding Contactos}" Width="*"/>
                     </DataGrid.Columns>
                     <DataGrid.ColumnHeaderStyle>
                         <Style TargetType="DataGridColumnHeader">
                             <Setter Property="SeparatorVisibility" Value="Visible"/>
-                            <Setter Property="Background" Value="{StaticResource tittleColor3}"/>
+                            <Setter Property="Background" Value="{StaticResource tittleColor1}"/>
+                            <Setter Property="Height" Value="30"/>
+                            <Setter Property="FontFamily" Value="Alegreya"/>
+                            <Setter Property="FontSize" Value="15"/>
+                            <Setter Property="Padding" Value="15 0 15 0"/>
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
                 </DataGrid>
@@ -103,6 +122,7 @@
                     <Label Content="Nombre:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5"/>
                     <Label Content="NIT:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5"/>
                     <Label Content="Dirección:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5"/>
+                    <Label Content="Contactos:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1" HorizontalAlignment="Left">
                     <TextBox x:Name="txtNombre" FontSize="14"
@@ -130,6 +150,18 @@
                              VerticalContentAlignment="Center"
                              Margin="5"/>
                     <TextBox x:Name="txtDireccion" FontSize="14"
+                             Height="30"
+                             Width="400"
+                             Background="Transparent"
+                             FontWeight="Medium"
+                             FontFamily="Alegreya"                             
+                             Foreground="{StaticResource tittleColor2}"
+                             CaretBrush="{StaticResource tittleColor1}"
+                             BorderBrush="{StaticResource tittleColor1}"
+                             BorderThickness="0,0,0,2"                             
+                             VerticalContentAlignment="Center"
+                             Margin="5"/>
+                    <TextBox x:Name="txtContactos" FontSize="14"
                              Height="30"
                              Width="400"
                              Background="Transparent"
